--- a/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
@@ -7,7 +7,11 @@
     <string name="nav_header_desc">Cabecera del panel de navegación</string>
     <string name="action_settings">Ajustes</string>
     <string name="action_profile">Perfil</string>
+    <string name="action_logout">Cerrar sesión</string>
     <string name="enter_message">Escriba un mensaje</string>
+    <string name="create_account">Aún no tienes una cuenta? <u>Crea una</u></string>
+    <string name="hypechat_desc">Logo de hypechat</string>
+    <string name="back">Go back</string>
 
     <string name="title_activity_login">Iniciar sesión</string>
     <!-- Strings related to login -->
@@ -18,7 +22,7 @@
     <string name="error_invalid_user">Este usuario no es válido</string>
     <string name="error_invalid_email">Este email no es válido</string>
     <string name="error_invalid_password">Esta password es muy corta</string>
-    <string name="error_incorrect_password">Esta password es incorrecta</string>
+    <string name="error_incorrect_password">Esta password es muy corta</string>
     <string name="error_pw_match">Las passwords no coinciden</string>
     <string name="error_field_required">Se requiere este campo</string>
     <string name="error_network">Conexión de red no disponible</string>
@@ -26,7 +30,6 @@
     <string name="action_register">Registrarse</string>
     <string name="prompt_username">Nombre de usuario</string>
     <string name="prompt_password_confirm">Confirmar password</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ok">OK</string>
+    <string name="cancel">CANCELAR</string>
 </resources>
