--- a/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
@@ -9,9 +9,12 @@
     <string name="action_profile">Perfil</string>
     <string name="action_logout">Cerrar sesión</string>
     <string name="enter_message">Escriba un mensaje</string>
-    <string name="create_account">Aún no tienes una cuenta? <u>Crea una</u></string>
+    <string name="create_account"><b>Aún no tienes una cuenta?</b> <u>Crea una</u></string>
+    <string name="password_restore"><b>¿Olvidaste tu contraseña?</b></string>
     <string name="hypechat_desc">Logo de hypechat</string>
     <string name="back">Go back</string>
+    <string name="inicio">Inicio</string>
+    <string name="channels">Canales</string>
 
     <string name="title_activity_login">Iniciar sesión</string>
     <!-- Strings related to login -->
@@ -29,9 +32,16 @@
     <string name="or">ó</string>
     <string name="action_register">Registrarse</string>
     <string name="prompt_username">Nombre de usuario</string>
+    <string name="prompt_token">Token</string>
+    <string name="prompt_organization">Nombre de organización</string>
     <string name="prompt_password_confirm">Confirmar password</string>
+    <string name="prompt_new_pw">Nueva password</string>
+    <string name="prompt_new_password_confirm">Confirmar nueva password</string>
     <string name="ok">OK</string>
     <string name="cancel">CANCELAR</string>
+    <string name="restore_pw">Restaurar contraseña</string>
+    <string name="token_restore">Tengo un token</string>
+    <string name="confirm_pw_change">Cambiar contraseña</string>
 
     <string name="usr_image_desc">Imagen de perfil del usuario</string>
     <string name="image_desc">Imagen segun corresponda al tipo</string>
@@ -40,4 +50,16 @@
     <string name="successful_login">Login exitoso</string>
     <string name="action_save_profile">Guardar cambios</string>
     <string name="saved_profile">Perfil guardado exitosamente</string>
+
+    <string name="action_join_organization">Unirse a una organización</string>
+    <string name="action_create_organization">Crear una organización</string>
+    <string name="action_create_only_organization">Crear organización</string>
+    <string name="what_to_do_organization">► ¿Qué desea hacer? ◄</string>
+    <string name="organizations">Organizaciones</string>
+
+    <string name="no_invitations">Aún no hay invitaciones</string>
+    <string name="invitations">Invitaciones</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
