--- a/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
@@ -62,4 +62,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string-array name="org_initial_array">
+        <item>Inicio</item>
+    </string-array>
 </resources>
