--- a/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
@@ -59,8 +59,11 @@
     <string name="organizations">Organizaciones</string>
     <string name="action_create_channel">Crear canal</string>
 
-    <string name="no_invitations">Aún no hay invitaciones</string>
+    <string name="no_invitations">No hay invitaciones pendientes</string>
     <string name="invitations">Invitaciones</string>
+
+    <string name="send_invite">Enviar invitación</string>
+    <string name="send_an_invite">Enviar una invitación</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
