--- a/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
 
     <string name="new_channel">Añadir canal</string>
     <string name="privado">Canal privado</string>
+    <string name="load_msg">Cargando mensajes...</string>
 </resources>
