--- a/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/values/strings.xml
@@ -73,6 +73,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="add_user_to_channel">Agregar usuario al canal</string>
+    <string name="add_user">Agregar a</string>
+
 
     <string-array name="org_initial_array">
         <item>Inicio</item>
